# aef-loader

./: .gitignore  .readthedocs.yaml  README.md  clip_geometry.geojson  mkdocs.yml  pyproject.toml  queried_tiles.geojson
.github/workflows/: integration.yml  lint.yml  publish.yml  test.yml  typecheck.yml
aef_loader/: __init__.py  _cloud.py  constants.py  index.py  reader.py  types.py  utils.py
aef_loader/fdp/: __init__.py  index.py  reader.py
benchmarks/: conftest.py  test_single_tile.py
docs/: api_examples.md  api_reference.md  benchmarks.md  data-sources.md  index.md
examples/: aef_embeddings_example.py  datatree_by_zone_example.py  source_coop_example.py
scripts/: test_nan_nodata.py
tests/: __init__.py  conftest.py  test_cloud.py  test_fdp_index.py  test_fdp_reader.py  test_index.py  test_integration.py  test_nodata_reproject.py  test_reader.py  test_reproject_datatree.py  test_reprojection.py  test_source_coop.py  test_types.py  test_utils.py
