[project]
name = "aef-loader"
version = "0.1.0"
description = "Virtualizarr access for AEF embeddings."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jake Wilkins" }
]
dependencies = [
    "virtual-tiff>=0.3.1",
    "virtualizarr>=2.0.0",
    "obstore>=0.4.0",
    "numpy>=1.24.0",
    "geopandas>=0.14.0",
    "xarray>=2024.1.0",
    "zarr>=3.0.0",
    "shapely>=2.0.2",
    "affine>=2.4.0",
    "odc-geo>=0.4.10",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "prek>=0.3.4",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff",
    "ty",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
benchmark = [
    "pytest-benchmark>=4.0.0",
    "rioxarray>=0.21.0",
    "xee>=0.0.24",
    "rasteret>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aef_loader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Fast unit tests without external dependencies",
    "integration: Integration tests that may require external services",
    "requires_gcp: Tests that require authenticated GCP credentials",
    "benchmark: Benchmarks comparing aef-loader against other loading tools",
]

[tool.ty.src]
exclude = ["examples/"]

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
possibly-missing-attribute = "ignore"
no-matching-overload = "ignore"
unresolved-attribute = "ignore"
